--- a/wedding/view/Master.view.xml
+++ b/wedding/view/Master.view.xml
@@ -22,7 +22,7 @@
 					densityAware="false"
 					class="sapUiNoMargin"
 					width="100%" 
-					height="100%"
+					height="350px"
 					press="attachClickEvent">
 					<layoutData>
 						<FlexItemData growFactor="1" />
